<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reportTitle"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/selectionButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/captureImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="18dp"
                    android:text="@string/capture_image" />

                <Button
                    android:id="@+id/selectFromStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="18dp"
                    android:text="@string/gallery" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/scannedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    card_view:cardCornerRadius="12dp"
                    card_view:cardElevation="20dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image" />

                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/scannedText"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/processLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/processImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:padding="18dp"
                        android:text="@string/process_image" />

                    <Button
                        android:id="@+id/clearAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:text="@string/clear" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/synonymsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/synonymsTitleTextView"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synonyms"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/synonymsView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue" />

                <TextView
                    android:id="@+id/synonymsTextView"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/antonymsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/antonymsTitleTextView"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/antonyms"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/antonymsView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue" />

                <TextView
                    android:id="@+id/antonymsTextView"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/thesaurusLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/thesaurusTitleTextView"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thesaurus"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/thesaurusView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue" />

                <TextView
                    android:id="@+id/thesaurusTextView"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/newsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/newsTitleTextView"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_news"
                    android:textSize="20sp" />
                <View
                    android:id="@+id/newsView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>